--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/head": "^0.7.6",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "swiper": "^8.2.4",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
